Added CSS, logger, service files and helper methods

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,2 +1,4 @@
-<h1> Edit Event </h1>
-<%= render 'event_data' %>
+<div class="main-container border border-dark-subtle p-2">
+  <h1> Edit Event </h1>
+  <%= render 'event_data' %>
+</div>
