--- a/app/views/events/_event_data.html.erb
+++ b/app/views/events/_event_data.html.erb
@@ -1,20 +1,21 @@
 <%= form_with model: @event do |f| %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="mb-3">
+    <%= f.label :name, class: "form-label"%>
+    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :event_type %><br />
-    <%= f.text_field :event_type, class: 'disabled' %>
+  <div class="mb-3">
+    <%= f.label :event_type %>
+    <%= f.text_field :event_type, class: 'disabled form-control', value: event_type_display(@event.event_type), disabled: true  %>
+    <%= f.hidden_field :event_type %>
   </div>
 
-  <div class="field">
-    <%= f.label :event_code %><br />
-    <%= f.text_field :event_code, class: 'disabled' %>
+  <div class="mb-3">
+    <%= f.label :event_code, class: "form-label"%>
+    <%= f.text_field :event_code, class: 'form-control' %>
   </div>
-
+ 
   <div>
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary mb-3' %>
   </div>
 <% end %>
