--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,4 @@
-<h1> Create New Event </h1>
-<%= render 'event_data' %>
+<div class="main-container border border-dark-subtle p-2">
+  <h1> Create Event </h1>
+  <%= render 'event_data' %>
+</div>
