--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,12 @@
   </head>
   <body>
     <%= render 'home/header' %>
-
-    <div class="container-xxl">
-      <br/>
+  <br/>
+    <div class="d-flex justify-content-center">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+    </div>
+    <div class="d-flex justify-content-center">
       <%= yield %>
     </div>
 
