added assests: CSS, image added logger implemented search functionality integrated iterable third party apis implemented validations added services

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,11 @@
-<h1> Event Details </h1>
-<h1> <%= @event.name %> </h1>
-<p> Event Type: <%= event_type_display(@event.event_type) %> </p>
-<p> Event Code: <%= @event.event_code %> </p>
+<div class="main-container border border-dark-subtle p-2">
+  <h1> Event Details </h1>
+  <hr>
+  <p> Event Name: <%= @event.name %> </p>
+  <p> Event Type: <%= event_type_display(@event.event_type) %> </p>
+  <p> Event Code: <%= @event.event_code %> </p>
 
-<%= link_to 'Edit', edit_event_path(@event), class: "btn btn-primary" %>
-<%= link_to 'Back', events_path, class: "btn btn-secondary" %>
+  <%= link_to 'Back', events_path, class: "btn btn-secondary" %>
+  <%= link_to 'Edit', edit_event_path(@event), class: "btn btn-primary" %>
+  <%= button_to "Delete", event_path(@event), method: :delete, class: "btn btn-danger mt-3" %>
+</div>
