--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,5 +1,5 @@
 <div class="main-container border border-dark-subtle p-2">
-  <h1>Events</h1>
+  <h1>Searh Result</h1>
   <div class="list-group">
     <% @events.each do |event| %>
       <div class="event-list_items mt-2">
