--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -6,3 +6,11 @@
   display: flex;
   justify-content: space-around;
 }
+.event-list_items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.custom_item {
+  width: 87%;
+}
