--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,13 +12,17 @@
           <% end %>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>&nbsp&nbsp
-      </form>
-
       <% if user_signed_in? %>
+        <form class="d-flex" role="search">
+          <%= form_tag search_path, method: :get do %>
+            <%= search_field_tag :search, params[:search], class: "form-control me-2" %>
+            <%= button_tag "Search", name: nil, class: "btn btn-outline-success" %>&nbsp&nbsp
+          <% end %>
+        </form>
+
         <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger" %>
+      <% else %>
+        <%= link_to "Sign in", new_user_session_path, class:"btn btn-outline-danger" %>
       <% end %>
     </div>
   </div>
