--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,6 +6,8 @@
   <p> Event Code: <%= @event.event_code %> </p>
 
   <%= link_to 'Back', events_path, class: "btn btn-secondary" %>
-  <%= link_to 'Edit', edit_event_path(@event), class: "btn btn-primary" %>
-  <%= button_to "Delete", event_path(@event), method: :delete, class: "btn btn-danger mt-3" %>
+  <% if @event.users.include? current_user %>
+    <%= link_to 'Edit', edit_event_path(@event), class: "btn btn-primary" %>
+    <%= button_to "Delete", event_path(@event), method: :delete, class: "btn btn-danger mt-3" %>
+  <% end %>
 </div>
